[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/Actors/Enemies/AI.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Enemies/GroundPizza/Pizza.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Explosion Particles.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Effects/Remains Particle.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDamage.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDeath.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Enemies/GroundPizza/JuggleAndMove.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Enemies/EnemyShield.gd" type="Script" id=9]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=11]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=12]
[ext_resource path="res://src/Sounds/56 - MMX - Enemy Death.wav" type="AudioStream" id=13]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=14]
[ext_resource path="res://src/Actors/Enemies/GroundPizza/pizza.res" type="SpriteFrames" id=16]
[ext_resource path="res://src/Actors/Enemies/GroundPizza/Deflect.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 33.5, 20 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 13.5, 5.25 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 8, 21.5 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 8, 6.5 )

[sub_resource type="Curve" id=247]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=239]
curve = SubResource( 247 )

[sub_resource type="ParticlesMaterial" id=245]
resource_local_to_scene = true
resource_name = "explosion"
emission_shape = 1
emission_sphere_radius = 25.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 239 )

[sub_resource type="Curve" id=248]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=243]
curve = SubResource( 248 )

[sub_resource type="ParticlesMaterial" id=246]
resource_local_to_scene = true
resource_name = "remains_single"
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 243 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 9, 11.0625 )

[node name="Pizza" type="KinematicBody2D" groups=["Enemies"]]
z_index = 2
collision_layer = 0
collision_mask = 513
script = ExtResource( 2 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 1 )
on_idle = [ NodePath("../MoveHorizontally") ]
on_get_hit = [ NodePath("../Deflect") ]
on_shield_hit = [ NodePath("../Deflect") ]

[node name="vision" type="Area2D" parent="AI"]
position = Vector2( 33, 0 )
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="AI/vision"]
visible = false
shape = SubResource( 14 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 12 )
frames = ExtResource( 16 )
animation = "closed"
playing = true
flip_h = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 18.5 )
shape = SubResource( 50 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 2, 2 )
rect = Rect2( -5, -5, 10, 10 )

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 4.5 )
shape = SubResource( 47 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 5 )
damage = 4.0

[node name="Projectile_DoT" type="Node2D" parent="."]
script = ExtResource( 5 )
damage = 4.0

[node name="projectile" type="Area2D" parent="Projectile_DoT"]
visible = false
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="Projectile_DoT/projectile"]
shape = SubResource( 48 )

[node name="lilpizza" type="AnimatedSprite" parent="Projectile_DoT/projectile"]
material = ExtResource( 12 )
z_index = -1
frames = ExtResource( 16 )
animation = "projectile"
frame = 1
playing = true
flip_h = true

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 6 )
active = false

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 14 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="EnemyDeath" type="Node2D" parent="."]
script = ExtResource( 7 )
explosion_duration = 0.0

[node name="Explosion Particles" parent="EnemyDeath" instance=ExtResource( 3 )]
process_material = SubResource( 245 )

[node name="Remains" parent="EnemyDeath" instance=ExtResource( 4 )]
process_material = SubResource( 246 )

[node name="remains_particles" parent="EnemyDeath/Remains" index="0"]
amount = 4

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="EnemyDeath"]
stream = ExtResource( 13 )
volume_db = -4.267
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="MoveHorizontally" type="Node2D" parent="."]
script = ExtResource( 8 )
conflicting_moves = [ "Deflect" ]
actions = [ "Event" ]
animation = "open"
jump_velocity = 20.0

[node name="cast_left" type="RayCast2D" parent="MoveHorizontally"]
visible = false
position = Vector2( -16, 20 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 65537

[node name="cast_right" type="RayCast2D" parent="MoveHorizontally"]
visible = false
position = Vector2( 16, 20 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 65537

[node name="cast_left2" type="RayCast2D" parent="MoveHorizontally"]
visible = false
position = Vector2( -16, 20 )
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 65537

[node name="cast_right2" type="RayCast2D" parent="MoveHorizontally"]
visible = false
position = Vector2( 16, 20 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 65537

[node name="Deflect" type="Node2D" parent="."]
script = ExtResource( 17 )
actions = [ "Event" ]
animation = "stop"

[node name="EnemyShield" type="Node2D" parent="."]
visible = false
script = ExtResource( 9 )
breakable = false

[node name="hittable_area" type="Area2D" parent="EnemyShield"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="EnemyShield/hittable_area"]
position = Vector2( 0, 9.0625 )
shape = SubResource( 49 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 11 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[connection signal="body_entered" from="AI/vision" to="AI" method="_on_vision_body_entered"]

[editable path="EnemyDeath/Remains"]
